将ｖｉｅｗ设置到可以拖拽到状态栏

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.example.pujw.bsrdemo.MessageBubbleView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+   <TextView
+       android:id="@+id/textView"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="text"
+       android:padding="10dp"
+       android:layout_margin="10dp"
+       android:background="@color/colorAccent"/>
 
 </RelativeLayout>
